--- a/shell.html
+++ b/shell.html
@@ -36,6 +36,12 @@
         position: relative;
         top: -210px;
       }
+      a{
+        color:white;
+      }
+      a:visited{
+        color:white;
+      }
     </style>
   </head>
   <body>
