--- a/browse-by-words.html
+++ b/browse-by-words.html
@@ -27,6 +27,9 @@
         .tabber a:visited{
             color:#3c3c3c;
         }
+        .tabber a{
+            color:#3c3c3c;
+        }
     </style>
 </head>
 <body>
